// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for a compound dialog with a close button 1`] = `
.c2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c2:focus:not(:focus-visible) {
  outline: none;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #fcfcfc;
  color: inherit;
}

.c8:focus:not(:focus-visible) {
  outline: none;
}

.c11 {
  fill: inherit;
  position: relative;
  font-size: 1em;
  height: 1em;
  width: 1em;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfc;
  border-radius: 4px;
  color: #435a6f;
  fill: #435a6f;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #b3b3b3;
}

.c7:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #444bc9 0px 0px 0px 2px;
}

.c7[disabled] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.c7 {
  border: 0;
  background: unset;
  color: #435a6f;
  fill: #435a6f;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c7:hover {
  color: #000;
  fill: #000;
}

.c5 {
  font-weight: 700;
  line-height: 1.2;
  margin-bottom: 1rem;
}

.heading.c5 + .sub-heading {
  margin-top: -1rem;
}

.c5:last-child {
  margin-bottom: 0;
}

h1.c5 {
  font-size: 3rem;
}

h2.c5 {
  font-size: 2.5rem;
}

h3.c5 {
  font-size: 2rem;
}

h4.c5 {
  font-size: 1.5rem;
}

h5.c5 {
  font-size: 1.25rem;
}

h6.c5 {
  font-size: 1rem;
}

.c5 .c10 {
  top: 0.15em;
}

.c5 {
  font-weight: 600;
}

.c1 {
  background-color: white;
  border-radius: 3px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  border: 1px solid #e6e6e6;
}

.c9 {
  border: 0px;
  -webkit-clip: rect(0px,0px,0px,0px);
  clip: rect(0px,0px,0px,0px);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0px;
  overflow: hidden;
  position: absolute;
}

.c12 {
  padding: 1.25rem;
  max-height: 50vh;
  overflow-y: scroll;
  width: 100%;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f2f2f2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 1.25rem;
  width: 100%;
}

.c4 {
  margin-bottom: 0px;
}

.c6 {
  height: 2em;
  width: 2em;
  padding: 0px;
}

.c6:hover {
  background-color: #f2f2f2;
}

.c0 {
  border-radius: 5px;
}

.c0:focus {
  outline: unset;
}

<div
  aria-describedby="Dialog-1"
  aria-labelledby="Dialog-2"
  class="c0 c1 c2"
  role="dialog"
>
  <div
    class="c3 c2"
  >
    <h5
      class="c4 sub-heading c5 c2"
      id="Dialog-2"
    >
      This is a title
    </h5>
    <button
      class="c6 c7 c8"
      kind="link"
      type="button"
    >
      <div
        class="c9 c2"
      >
        Close
      </div>
      <svg
        class="c10 c11 c2"
        role="img"
        size="1"
        style="size: 1px;"
        viewBox="0 0 352 512"
      >
        <path
          d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </div>
  <div
    class="c12 c2"
    id="Dialog-1"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse diam ipsum, cursus id placerat congue, ultrices eget lectus. Duis posuere, lacus sed tristique commodo, sapien turpis mollis nunc, vestibulum consectetur lectus augue sit amet justo.
  </div>
</div>
`;

exports[`renders correctly for a default dialog 1`] = `
.c2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c2:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  font-weight: 700;
  line-height: 1.2;
  margin-bottom: 1rem;
}

.heading.c5 + .sub-heading {
  margin-top: -1rem;
}

.c5:last-child {
  margin-bottom: 0;
}

h1.c5 {
  font-size: 3rem;
}

h2.c5 {
  font-size: 2.5rem;
}

h3.c5 {
  font-size: 2rem;
}

h4.c5 {
  font-size: 1.5rem;
}

h5.c5 {
  font-size: 1.25rem;
}

h6.c5 {
  font-size: 1rem;
}

.c5 .c7 {
  top: 0.15em;
}

.c5 {
  font-weight: 600;
}

.c1 {
  background-color: white;
  border-radius: 3px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  border: 1px solid #e6e6e6;
}

.c6 {
  padding: 1.25rem;
  max-height: 50vh;
  overflow-y: scroll;
  width: 100%;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f2f2f2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 1.25rem;
  width: 100%;
}

.c4 {
  margin-bottom: 0px;
}

.c0 {
  border-radius: 5px;
}

.c0:focus {
  outline: unset;
}

<div
  class="c0 c1 c2"
  role="dialog"
>
  <div
    class="c3 c2"
  >
    <h5
      class="c4 sub-heading c5 c2"
    >
      This is a title
    </h5>
  </div>
  <div
    class="c6 c2"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse diam ipsum, cursus id placerat congue, ultrices eget lectus. Duis posuere, lacus sed tristique commodo, sapien turpis mollis nunc, vestibulum consectetur lectus augue sit amet justo.
  </div>
</div>
`;

exports[`renders correctly for a dialog with a footer 1`] = `
.c2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c2:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  font-weight: 700;
  line-height: 1.2;
  margin-bottom: 1rem;
}

.heading.c5 + .sub-heading {
  margin-top: -1rem;
}

.c5:last-child {
  margin-bottom: 0;
}

h1.c5 {
  font-size: 3rem;
}

h2.c5 {
  font-size: 2.5rem;
}

h3.c5 {
  font-size: 2rem;
}

h4.c5 {
  font-size: 1.5rem;
}

h5.c5 {
  font-size: 1.25rem;
}

h6.c5 {
  font-size: 1rem;
}

.c5 .c8 {
  top: 0.15em;
}

.c5 {
  font-weight: 600;
}

.c1 {
  background-color: white;
  border-radius: 3px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  border: 1px solid #e6e6e6;
}

.c6 {
  padding: 1.25rem;
  max-height: 50vh;
  overflow-y: scroll;
  width: 100%;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f2f2f2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 1.25rem;
  width: 100%;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f2f2f2;
  padding: 1rem 1rem;
  width: 100%;
}

.c4 {
  margin-bottom: 0px;
}

.c0 {
  border-radius: 5px;
}

.c0:focus {
  outline: unset;
}

<div
  class="c0 c1 c2"
  role="dialog"
>
  <div
    class="c3 c2"
  >
    <h5
      class="c4 sub-heading c5 c2"
    >
      This is a title
    </h5>
  </div>
  <div
    class="c6 c2"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse diam ipsum, cursus id placerat congue, ultrices eget lectus. Duis posuere, lacus sed tristique commodo, sapien turpis mollis nunc, vestibulum consectetur lectus augue sit amet justo.
  </div>
  <div
    class="c7 c2"
  >
    test
  </div>
</div>
`;
